--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="currency">
                 <div class="leftCurr">
                     <p class="buy">У меня есть</p>
-                    <div class="curreny">
+                    <div class="curreny currenyLeft">
                         <button class="currencies leftBorder">RUB</button>
                         <button class="currencies">USD</button>
                         <button class="currencies">EUR</button>
@@ -49,7 +49,7 @@
             <img class="change" src="/img/Group 5.svg" alt="img">
             <div class="rightCurr">
                 <p class="buy">Хочу приобрести</p>
-                <div class="curreny">
+                <div class="curreny currenyRight">
                     <button class="currencies leftBorder">RUB</button>
                     <button class="currencies">USD</button>
                     <button class="currencies">EUR</button>
