--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="text">
                         <input class="inpPut">
-                        <p class="rates">text</p>
+                        <p class="rates"></p>
                     </div>
                 </div>
             </div>
@@ -54,12 +54,13 @@
                     <button class="currencies">USD</button>
                     <button class="currencies">EUR</button>
                     <button class="currencies">GBP</button>
-                    <select class="rightBorder" name="rightBorder">
+                    <select class="rightBorder letfborders" name="rightBorder">
                         <option value="BYR">BYR</option>
                     </select>
                 </div>
                 <div class="text">
                     <input class="inpPut">
+                    <p class="rates1"></p>
                 </div>
             </div>
         </div>
