--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </select>
                     </div>
                     <div class="text">
-                        <input class="inpPut">
+                        <input class="inpPut inpPutLeft" type="number" value="1">
                         <p class="rates"></p>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     </select>
                 </div>
                 <div class="text">
-                    <input class="inpPut">
+                    <input class="inpPut inpPutRight" type="number">
                     <p class="rates1"></p>
                 </div>
             </div>
