--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="leftCurr">
                     <p class="buy">У меня есть</p>
                     <div class="curreny currenyLeft">
-                        <button class="currencies leftBorder">RUB</button>
+                        <button class="currencies leftBorder one">RUB</button>
                         <button class="currencies">USD</button>
                         <button class="currencies">EUR</button>
                         <button class="currencies">GBP</button>
@@ -50,7 +50,7 @@
                 <p class="buy">Хочу приобрести</p>
                 <div class="curreny currenyRight">
                     <button class="currencies leftBorder">RUB</button>
-                    <button class="currencies">USD</button>
+                    <button class="currencies one">USD</button>
                     <button class="currencies">EUR</button>
                     <button class="currencies">GBP</button>
                     <select class="rightBorder letfborders" name="rightBorder">
