--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 
 <body>
+    <div class="wrapperLoading">
+        <div class="loadingWindow">
+            <p class="load">Loading</p>
+        </div>
+    </div>
     <div class="header">
         <img class="logo" src="/img/logo.svg" alt="logo">
         <div class="headerMenu">
-            <a class="menu">БАНК</a>
+            <a class="menu bank">БАНК</a>
             <a class="menu">БИЗНЕС</a>
             <a class="menu">ИНВЕСТИЦИИ</a>
             <a class="menu">СТРАХОВАНИЕ</a>
