--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="header">
-        <img class="logo" src="/img/logo.svg" alt="logo">
+        <img class="logo" src="./img/logo.svg" alt="logo">
         <div class="headerMenu">
             <a class="menu bank">БАНК</a>
             <a class="menu">БИЗНЕС</a>
@@ -27,7 +27,7 @@
             <a class="menu">ПУТЕШЕСТВИЯ</a>
             <a class="menu">РАЗВЛЕЧЕНИЯ</a>
         </div>
-        <img class="lk" src="/img/lk.svg" alt="lk">
+        <img class="lk" src="./img/lk.svg" alt="lk">
     </div>
 
     <div class="container">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <img class="change" src="/img/Group 5.svg" alt="img">
+            <img class="change" src="./img/Group 5.svg" alt="img">
             <div class="rightCurr">
                 <p class="buy">Хочу приобрести</p>
                 <div class="curreny currenyRight">
